--- a/index.html
+++ b/index.html
@@ -82,42 +82,31 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Fellow<br><a href="https://www.iza.org/person/24155/tyler-ransom">Institute for the Study of Labor (IZA)</a></p>
-        <p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <h1>Neil Duzett</h1>
+        <p>Economics PhD Candidate<br>Texas A&M University</p>
+        <h3><a href="https://nduzett.github.io/research.html">Research</a></h3>
+    <h3><a href="https://nduzett.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://nduzett.github.io/teaching.html">Teaching</a></h3> 
         <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
+          <a href="mailto:nduzett@tamu.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
           <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid"></i> ORCID</a><br>
           <a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec"></i> RePEc</a><br>
           <a href="http://github.com/tyleransom"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
-          <a href="https://tyleransom.substack.com" class="author-social" target="_blank"><i class="fas fa-fw fa-rss"></i> Substack</a><br>
-          <a href="http://x.com/tyleransom" class="author-social" target="_blank"><i class="fab fa-fw fa-x-twitter"></i> X</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fab fa-fw fa-linkedin"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact:</b><br>Department of Economics<br>Texas A&M University<br>322 CCD1, 308 Cate Center Drive<br>College Station, TX</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
       <img src="IMG_1781-Edit copy.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-  <p>I am an Associate Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a>, a Research Fellow at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>, and a Fellow at <a href="https://www.globalabororganization.org/">Global Labor Organization (GLO)</a>. I received my PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in 2015, where I specialized in dynamic models of human capital accumulation.</p>
+  <p>I am a 5th-year PhD candidate in economics at <a href="http://www.ou.edu/">University of Oklahoma</a></p>
 
-  <p>My research focuses on labor economics, economics of education, urban economics, and applications of machine learning. I have published extensively in leading economics journals, including the <i>Journal of Political Economy</i>, the <i>Journal of Labor Economics</i>, the <i>Journal of Human Resources</i>, and the <i>Journal of Econometrics</i>. My recent work has examined college admissions practices, educational inequality, and human capital development. I also serve as an Associate Editor of the <i>Annals of Economics and Statistics</i> and <i>Economics of Education Review</i>.</p>
+  <p>My research focuses on ... </p>
 
-  <p>At OU, I direct the Economics BA/MA Program and teach courses in econometrics, data science, and economics of education at both undergraduate and graduate levels. My contributions to research and teaching were recognized with the 2022 Irene Rothbaum Outstanding Assistant Professor Award from the OU Dodge Family College of Arts & Sciences. My research has had significant policy impact and has been featured in major media outlets including the <i>New York Times</i>, <i>The Economist</i>, <i>The Atlantic</i>, and <i>The Guardian</i>. In 2025, I was awarded the Heritage Foundation Freedom and Opportunity Academic Prize in recognition of my scholarship and contributions to the academic community.</p>
-
-  <p>I bring strong technical expertise to my research, with proficiency in Matlab, Stata, R, Julia, Python, LaTeX, Shell/Bash, SLURM, and Git. I also have advanced proficiency in Japanese and beginning knowledge of Korean and German.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
