--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Neil Duzett by nduzett</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -93,17 +93,17 @@
           <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid"></i> ORCID</a><br>
           <a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
+          <a href="http://github.com/nduzett"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>Texas A&M University<br>322 CCD1, 308 Cate Center Drive<br>College Station, TX</p>
+    <p><b>Contact:</b><br>Department of Economics<br>Texas A&M University<br>2935 Research Parkway<br>College Station, TX 77843</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG_1781-Edit copy.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-  <p>I am a 5th-year PhD candidate in economics at <a href="http://www.ou.edu/">University of Oklahoma</a></p>
+      <img src="IMG_1781-Edit copy.jpg" height="250" width="250" alt="Neil Duzett"></h3>
+  <p>I am a 5th-year PhD candidate in economics at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University</a></p>
 
   <p>My research focuses on ... </p>
 
