--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG_1781-Edit copy.jpg" height="250" width="250" alt="Neil Duzett"></h3>
-  <p>I am a 5th-year PhD candidate in economics at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University</a></p>
+      <img src="replace_me.png" height="250" width="250" alt="Neil Duzett"></h3>
+  <p>I am a 5th-year economics PhD candidate at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University</a></p>
 
   <p>My research focuses on ... </p>
 
