--- a/index.html
+++ b/index.html
@@ -86,15 +86,12 @@
         <p>Economics PhD Candidate<br>Texas A&M University</p>
 	<h3><a href="https://nduzett.github.io/">Home</a></h3>
         <h3><a href="https://nduzett.github.io/research.html">Research</a></h3>
-    <h3><a href="https://nduzett.github.io/research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://nduzett.github.io/cv_ncd_2025_7_23.pdf">CV</a></h3>  
         <h3><a href="https://nduzett.github.io/teaching.html">Teaching</a></h3> 
         <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:nduzett@tamu.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec"></i> RePEc</a><br>
-          <a href="http://github.com/nduzett"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
+          <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=0AxLj2sAAAAJ&gmla=AH8HC4z1OyuwF70QnJ3utqznHAkiSktbg1IHHEGtVTfjLbqGI0kKp2KiPyImhl2l9-H4vJ_-tn_pD-1y1VffaNb0C4bTNLveyBlfig" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
           <br>
         </div>
         <br>
