--- a/index.html
+++ b/index.html
@@ -89,10 +89,18 @@
     <h3><a href="https://nduzett.github.io/cv_ncd_2025_7_23.pdf">CV</a></h3>  
         <h3><a href="https://nduzett.github.io/teaching.html">Teaching</a></h3> 
         <b>Social</b><br>
-        <div class="social-row">
-          <a href="mailto:nduzett@tamu.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=0AxLj2sAAAAJ&gmla=AH8HC4z1OyuwF70QnJ3utqznHAkiSktbg1IHHEGtVTfjLbqGI0kKp2KiPyImhl2l9-H4vJ_-tn_pD-1y1VffaNb0C4bTNLveyBlfig" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
-        </div>
+       <div class="social-row">
+  	<div>
+    	<a href="mailto:nduzett@tamu.edu" class="author-social" target="_blank">
+      		<i class="fas fa-fw fa-envelope"></i> Email
+    	</a>
+  	</div>
+ 	<div>
+    	<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=0AxLj2sAAAAJ&gmla=AH8HC4z1OyuwF70QnJ3utqznHAkiSktbg1IHHEGtVTfjLbqGI0kKp2KiPyImhl2l9-H4vJ_-tn_pD-1y1VffaNb0C4bTNLveyBlfig" target="_blank">
+      	<i class="ai ai-fw ai-google-scholar"></i> Scholar
+    	</a>
+  	</div>
+       </div>
         <br>
 
     <p><b>Contact:</b><br>Department of Economics<br>Texas A&M University<br>2935 Research Parkway<br>College Station, TX 77843</p>
@@ -100,9 +108,10 @@
       </header>
       <section>
       <img src="replace_me.png" height="250" width="250" alt="Neil Duzett"></h3>
-  <p>I am a 5th-year economics PhD candidate at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University. I received a BS in Economics and Mathematics from Brigham Young University in 2020, and worked as a pre-doc researcher in BYU's Record Linking Lab from 2020-2021. </a></p>
+  <p>I am a 5th-year economics PhD candidate at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University.</a>
+I received a BS in Economics and Mathematics from Brigham Young University in 2020, and worked as a pre-doc researcher in BYU's Record Linking Lab from 2020-2021. </p>
 
-  <p>My research focuses on public economics and political economy, using quasiexperimental and machine-learning methods in the local government setting to learn about group behavior and decision-making. </p>
+  <p>My research focuses on public economics and political economy, using quasi-experimental and machine-learning methods in the local government setting to learn about group behavior and decision-making. </p>
 
       </section>
     </div>
