--- a/index.html
+++ b/index.html
@@ -89,18 +89,10 @@
     <h3><a href="https://nduzett.github.io/cv_ncd_2025_7_23.pdf">CV</a></h3>  
         <h3><a href="https://nduzett.github.io/teaching.html">Teaching</a></h3> 
         <b>Social</b><br>
-       <div class="social-row">
-  	<div>
-    	<a href="mailto:nduzett@tamu.edu" class="author-social" target="_blank">
-      		<i class="fas fa-fw fa-envelope"></i> Email
-    	</a>
-  	</div>
- 	<div>
-    	<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=0AxLj2sAAAAJ&gmla=AH8HC4z1OyuwF70QnJ3utqznHAkiSktbg1IHHEGtVTfjLbqGI0kKp2KiPyImhl2l9-H4vJ_-tn_pD-1y1VffaNb0C4bTNLveyBlfig" target="_blank">
-      	<i class="ai ai-fw ai-google-scholar"></i> Scholar
-    	</a>
-  	</div>
-       </div>
+        <div class="social-row">
+          <a href="mailto:nduzett@tamu.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a>
+          <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=0AxLj2sAAAAJ&gmla=AH8HC4z1OyuwF70QnJ3utqznHAkiSktbg1IHHEGtVTfjLbqGI0kKp2KiPyImhl2l9-H4vJ_-tn_pD-1y1VffaNb0C4bTNLveyBlfig" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
+        </div>
         <br>
 
     <p><b>Contact:</b><br>Department of Economics<br>Texas A&M University<br>2935 Research Parkway<br>College Station, TX 77843</p>
