--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="headshot.jpg" width="250" alt="Neil Duzett"></h3>
+      <img src="headshot.jpg" height="250" alt="Neil Duzett"></h3>
   <p>I am a 5th-year economics PhD candidate at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University.</a>
 I received a BS in Economics and Mathematics from Brigham Young University in 2020, and worked as a pre-doc researcher in BYU's Record Linking Lab from 2020-2021. </p>
 
