--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <img src="headshot.jpg" height="300" alt="Neil Duzett"></h3>
 <br>
   <p>I am a 5th-year economics PhD candidate at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University.</a>
-I received a BS in Economics and Mathematics from Brigham Young University in 2020, and worked as a pre-doc researcher in BYU's Record Linking Lab from 2020-2021. </p>
+I received a BS in Economics and Mathematics from Brigham Young University in 2020, and worked as a pre-doctoral researcher in BYU's Record Linking Lab from 2020-2021. </p>
 
   <p>My research focuses on public economics and political economy, using quasi-experimental and machine-learning methods in the local government setting to learn about group behavior and decision-making. </p>
 
