--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
         <p>Economics PhD Candidate<br>Texas A&M University</p>
 	<h3><a href="https://nduzett.github.io/">Home</a></h3>
         <h3><a href="https://nduzett.github.io/research.html">Research</a></h3>
-    <h3><a href="https://nduzett.github.io/cv_ncd_2025_7_23.pdf">CV</a></h3>  
+    <h3><a href="https://nduzett.github.io/cv_ncd_2025_9_2.pdf">CV</a></h3>  
         <h3><a href="https://nduzett.github.io/teaching.html">Teaching</a></h3> 
         <b>Social</b><br>
         <div class="social-row">
@@ -111,10 +111,10 @@
 
     <h2><a id="recent-papers-updated" class="anchor" href="#workingpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Job Market Paper</h2>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://nduzett.github.io/research/ccd_draft_nber.pdf">Does Diversity Improve Group Performance? Evidence from U.S. City Councils</a> <br> (updated March 20, 2025) <br><button class="accordion">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="">Does Diversity Improve Group Performance? Evidence from U.S. City Councils</a> <br> (updated March 20, 2025) <br><button class="accordion">
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Using a regression discontinuity design that exploits close elections between different-race candidates, I estimate the causal effect of increasing racial diversity on city council performance, measured by future vote shares. Consistent with theories on diversity in groups of varying sizes, I find that diversity improves performance in large councils, increasing next election vote shares by 5.9%. However, increased diversity has no effect or decreases performance in small councils. I investigate key communication mechanisms through natural language processing on city council meeting transcripts. I find that increased racial diversity causes large shifts in discussion topics, moving discussion toward commentary from the public and city officials and zoning legislation. However, diversity also increases negative sentiment overall within these meetings by 35% from baseline. Heterogeneity by council size suggests differences in these crucial communication mechanisms may drive the differences in performance gains. These results highlight the role of communication in mediating diversity’s effects, showing that diversity enhances performance when groups are large enough to mitigate frictions.  </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> The debate surrounding diversity in organizations has intensified in recent years, spurred by claims that it enhances group decision-making and performance. Yet despite significant attention and investment, evidence on diversity's effects, its channels, and how these depend on group characteristics remains limited. This paper provies new evidence on diversity in the U.S. city council setting. Leveraging quasi-random victories in close elections between different-race candidates, I use a regression discontinuity design to estimate the impact of racial diversity on city council communication and effectiveness. Applying natural language topic modeling and sentiment analysis techniques to 17,000 city council meeting transcripts, I show that diversity enhances information exchange, but also heightens communication frictions - increasing negativity in council meetings by 66%. These competing communication effects are strongly associated with diversity's effects on two different measures of council effectiveness: council diversity increases local house prices by 3% within one election term, and improves incumbent vote shares by 6.7 points. These effects are driven by councils with low communication frictions, suggesting that communication plays a key role in determining the effectiveness of diverse groups. </p></div>
 
 	<br>
 
@@ -127,7 +127,7 @@
 
 	<br>
 
-<p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://nduzett.github.io/research/gh_draft_7_24_2025.pdf">The Composition of Power: Gender Penalties in Close Elections</a> <br> (updated July 24, 2025) <br> <button class="accordion">
+<p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://nduzett.github.io/research/gender_penalties.pdf">The Composition of Power: Gender Penalties in Close Elections</a> <br> (updated September 5, 2025) <br> <button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Using national data on local government elections in the U.S., I show that in close elections between candidates of different genders, defeat consistently goes to the candidate who does not match current officeholders’ most common gender. These gender-minority candidates are 1.9 times as likely to lose as win near the victory cutoff. This penalty exists for both women and men, is present across multiple government offices, and results in long run elected body compositions being 7% less female. I provide evidence that gender disparities in campaign donations contribute to this gender-minority penalty in close elections. </p></div>
