--- a/teaching.html
+++ b/teaching.html
@@ -101,10 +101,9 @@
       <section>
       <img src="headshot.jpg" height="300" alt="Neil Duzett"></h3>
 <br>
-  <p>Classes taught at <a href="https://artsci.tamu.edu/economics/index.html">Texas A&M University.</a></p>
-<p>ECON 465: Contemporary Economic Issues</p>
+  <p>Classes taught at Texas A&M University</p>
+<p>ECON 465: Contemporary Economic Issues
 <a href="https://nduzett.github.io/teaching/econ_465_syllabus.pdf">Syllabus</a></p>
-<br>
 <p>ECON 285: Hullabaloo U</p>
 
       </section>
