--- a/teaching.html
+++ b/teaching.html
@@ -99,10 +99,9 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="headshot.jpg" height="300" alt="Neil Duzett"></h3>
 <br>
-  <p>Classes taught at Texas A&M University</p>
-<p>ECON 465: Contemporary Economic Issues
+  <p><u>Classes taught at Texas A&M University</u></p>
+<p>ECON 465: Contemporary Economic Issues<br>
 <a href="https://nduzett.github.io/teaching/econ_465_syllabus.pdf">Syllabus</a></p>
 <p>ECON 285: Hullabaloo U</p>
 
