--- a/teaching.html
+++ b/teaching.html
@@ -97,6 +97,7 @@
 
     <p><b>Contact:</b><br>Department of Economics<br>Texas A&M University<br>2935 Research Parkway<br>College Station, TX 77843</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+<p><small>Website formatting based on <a href="https://tyleransom.github.io/">Tyler Ransom's website</a></small></p>
       </header>
       <section>
 <br>
